--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
-springdoc.pathsToMatch=/api/**
+#server.servlet.context-path=/api
+#spring.data.rest.base-path=/api
